==> SwiperWitty/Caven-MCU_Lib/Base_AT32F403A/Base_UART.c <==
#include "Base_UART.h"
#define RXD_Falg USART_RDBF_FLAG //  接收标志
#define TXD_Falg USART_TDC_FLAG  //  【USART_FLAG_TXE】这个只是说明，数据被cpu取走,【USART_FLAG_TC】这是完全发送完成

static char UART_RXD_Flag(UART_mType Channel)
{
    char res;
    switch (Channel)
    {
    case 0:
        return 0;
    case 1:
        uart_Temp = USART1;
        break;
    case 2:
        uart_Temp = USART2;
        break;
    case 3:
        uart_Temp = USART3;
        break;
    case 4:
        uart_Temp = UART4;
        break;
    default:
        return 0;
    }
    res = usart_flag_get(uart_Temp, RXD_Falg);
    return res;
}

static uint16_t UART_RXD_Receive(UART_mType Channel) // RXD 读取值
{
    uint16_t res;
    switch (Channel)
    {
    case 0:
        return 0;
    case 1:
        uart_Temp = USART1;
        break;
    case 2:
        uart_Temp = USART2;
        break;
    case 3:
        uart_Temp = USART3;
        break;
    case 4:
        uart_Temp = UART4;
        break;
    default:
        return 0;
    }
    res = usart_data_receive(uart_Temp);
    return res;
}

static void Uart1_Init(int Baud, int Set)
{
    confirm_state set = FALSE;
    uart_Temp = USART1;
    usart_reset(uart_Temp);
    if (Set)
        set = TRUE;

    crm_periph_clock_enable(CRM_USART1_PERIPH_CLOCK, set);
    crm_periph_clock_enable(CRM_GPIOA_PERIPH_CLOCK, TRUE);
    gpio_init_type gpio_init_struct;
    gpio_default_para_init(&gpio_init_struct);

    gpio_init_struct.gpio_pins = GPIO_PINS_9; // Tx
    gpio_init_struct.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
    gpio_init_struct.gpio_out_type = GPIO_OUTPUT_PUSH_PULL;
    gpio_init_struct.gpio_mode = GPIO_MODE_MUX;
    gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
    gpio_init(GPIOA, &gpio_init_struct);

    gpio_init_struct.gpio_pins = GPIO_PINS_10; // Rx
    gpio_init_struct.gpio_mode = GPIO_MODE_INPUT;
    gpio_init_struct.gpio_pull = GPIO_PULL_UP;
    gpio_init(GPIOA, &gpio_init_struct);

    nvic_priority_group_config(NVIC_PRIORITY_GROUP_4);
    nvic_irq_enable(USART1_IRQn, 0, 1);                 //

    usart_init(uart_Temp, Baud, USART_DATA_8BITS, USART_STOP_1_BIT);    // 波特率、位数、停止位
    usart_transmitter_enable(uart_Temp, TRUE);                          // 发送使能
    usart_receiver_enable(uart_Temp, TRUE);                             // 接收使能

    usart_parity_selection_config(uart_Temp, USART_PARITY_NONE);        // 无奇偶校验
    usart_interrupt_enable(uart_Temp, USART_RDBF_INT, TRUE);
    usart_enable(uart_Temp, TRUE);
}

void Uart2_Init(int Baud, int Set)
{
    confirm_state set = FALSE;
    uart_Temp = USART2;
    usart_reset(uart_Temp);
    gpio_init_type gpio_init_struct;
    gpio_default_para_init(&gpio_init_struct);
    if (Set)
        set = TRUE;
    /* add user code begin usart2_init 0 */
    /* add user code end usart2_init 0 */
    crm_periph_clock_enable(CRM_GPIOA_PERIPH_CLOCK, TRUE);
    crm_periph_clock_enable(CRM_USART2_PERIPH_CLOCK, TRUE);
    
    /* add user code begin usart2_init 1 */
    /* add user code end usart2_init 1 */
    /* configure the TX pin */
    gpio_init_struct.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MODERATE;
    gpio_init_struct.gpio_out_type = GPIO_OUTPUT_PUSH_PULL;
    gpio_init_struct.gpio_mode = GPIO_MODE_MUX;
    gpio_init_struct.gpio_pins = GPIO_PINS_2;
    gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
    gpio_init(GPIOA, &gpio_init_struct);
    /* configure the RX pin */
    gpio_init_struct.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MODERATE;
    gpio_init_struct.gpio_out_type  = GPIO_OUTPUT_PUSH_PULL;
    gpio_init_struct.gpio_mode = GPIO_MODE_INPUT;
    gpio_init_struct.gpio_pins = GPIO_PINS_3;
    gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
    gpio_init(GPIOA, &gpio_init_struct);
    /* configure param */
    nvic_priority_group_config(NVIC_PRIORITY_GROUP_4);
    nvic_irq_enable(USART2_IRQn, 0, 2);                                 // 优先级,中断
    
    usart_init(uart_Temp, Baud, USART_DATA_8BITS, USART_STOP_1_BIT);    // 波特率、位数、停止位
    usart_transmitter_enable(uart_Temp, TRUE);                          // 发送使能
    usart_receiver_enable(uart_Temp, TRUE);                             // 接收使能
    usart_parity_selection_config(uart_Temp, USART_PARITY_NONE);
    
    usart_hardware_flow_control_set(uart_Temp, USART_HARDWARE_FLOW_NONE);
    usart_interrupt_enable(uart_Temp, USART_RDBF_INT, TRUE);            // 中断
    /**
     * Users need to configure USART2 interrupt functions according to the actual application.
     * 1. Call the below function to enable the corresponding USART2 interrupt.
     *     --usart_interrupt_enable(...)
     * 2. Add the user's interrupt handler code into the below function in the at32f403a_407_int.c file.
     *     --void USART2_IRQHandler(void)
     */
    usart_enable(uart_Temp, set);
    /* add user code begin usart2_init 2 */
    /* add user code end usart2_init 2 */
}

void Uart3_Init(int Baud, int Set)
{
    confirm_state set = FALSE;
    uart_Temp = USART3;
    usart_reset(uart_Temp);
    if (Set)
        set = TRUE;

    crm_periph_clock_enable(CRM_IOMUX_PERIPH_CLOCK, TRUE);
    crm_periph_clock_enable(CRM_GPIOC_PERIPH_CLOCK, TRUE);
    crm_periph_clock_enable(CRM_USART3_PERIPH_CLOCK, TRUE);
    gpio_init_type gpio_init_struct;
    gpio_default_para_init(&gpio_init_struct);

    /* configure the TX pin */
    gpio_init_struct.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MODERATE;
    gpio_init_struct.gpio_out_type = GPIO_OUTPUT_PUSH_PULL;
    gpio_init_struct.gpio_mode = GPIO_MODE_MUX;
    gpio_init_struct.gpio_pins = GPIO_PINS_10;
    gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
    gpio_init(GPIOC, &gpio_init_struct);
    /* configure the RX pin */
    gpio_init_struct.gpio_drive_strength = GPIO_DRIVE_STRENGTH_MODERATE;
    gpio_init_struct.gpio_out_type  = GPIO_OUTPUT_PUSH_PULL;
    gpio_init_struct.gpio_mode = GPIO_MODE_INPUT;
    gpio_init_struct.gpio_pins = GPIO_PINS_11;
    gpio_init_struct.gpio_pull = GPIO_PULL_NONE;
    gpio_init(GPIOC, &gpio_init_struct);
    gpio_pin_remap_config(USART3_GMUX_0001, TRUE);
    /* configure param */
    nvic_priority_group_config(NVIC_PRIORITY_GROUP_4);
    nvic_irq_enable(USART3_IRQn, 0, 3);                                 // 优先级
    
    usart_init(uart_Temp, Baud, USART_DATA_8BITS, USART_STOP_1_BIT);    // 波特率、位数、停止位
    usart_transmitter_enable(uart_Temp, TRUE);                          // 发送使能
    usart_receiver_enable(uart_Temp, TRUE);                             // 接收使能
    usart_parity_selection_config(uart_Temp, USART_PARITY_NONE);
    
    usart_hardware_flow_control_set(uart_Temp, USART_HARDWARE_FLOW_NONE);
    usart_interrupt_enable(uart_Temp, USART_RDBF_INT, TRUE);

    usart_enable(uart_Temp, set);
}

void Uart4_Init(int Baud, int Set)
{
    confirm_state set = FALSE;
    uart_Temp = UART4;
    usart_reset(uart_Temp);
    if (Set)
        set = TRUE;
        
}

int Base_UART_Init(UART_mType Channel, int Baud, int SET)
{
    int retval = -1;
	
#ifdef Exist_UART
    crm_periph_clock_enable(CRM_DMA1_PERIPH_CLOCK, TRUE);
    crm_periph_clock_enable(CRM_DMA2_PERIPH_CLOCK, TRUE);
    switch (Channel)
    {
    case 0:
		
        break;
    case 1:
        Uart1_Init(Baud, SET);
        retval = 0;
        break;
    case 2:
        Uart2_Init(Baud, SET);
        retval = 0;
        break;
    case 3:
        Uart3_Init(Baud, SET);
        retval = 0;
        break;
    case 4:
//        Uart4_Init(Baud, SET);
        retval = 0;
        break;
    default:
        break;
    }
#endif
    return retval;
}

void Base_UART_DMA_Send_Data(UART_mType Channel, const uint8_t *Data, int Length)
{
#ifdef DMA_UART
    static char dma_send_First = 0;
    
    dma_init_type dma_init_struct;
    dma_channel_type *Temp_DMA_Channel;
    
    uint32_t DMAy_FLAG;
    uint8_t *p_DMA_BUFF = NULL;
    
    switch (Channel)
    {
        case 0:
        return;
        case 1:
        {
            uart_Temp = USART1;
            p_DMA_BUFF = NULL;
            DMAy_FLAG = DMA1_FDT4_FLAG;
            Temp_DMA_Channel = DMA1_CHANNEL4;
        }
        break;
        case 2:
        {
            uart_Temp = USART2;
            p_DMA_BUFF = DMA_UART2_Buff;
            DMAy_FLAG = DMA1_FDT7_FLAG;
            Temp_DMA_Channel = DMA1_CHANNEL7;
        }
        break;
        case 3:
        {
            uart_Temp = USART3;
            p_DMA_BUFF = DMA_UART3_Buff;
            DMAy_FLAG = DMA1_FDT2_FLAG;
            Temp_DMA_Channel = DMA1_CHANNEL2;   // usart3 tx
        }
        break;
        case 4:
        {
            uart_Temp = UART4;
            p_DMA_BUFF = NULL;
        }
        break;
    default:
        return;
    }
    // 开始DMA
    if (Data == NULL || p_DMA_BUFF == NULL || (Length < 0)) {
        return;
    }

    if ((dma_send_First & (0x01 << Channel)) == 0)            // 当前通道首次DMA，不等
    {
        dma_send_First |= (0x01 << Channel);
        dma_flag_clear(DMAy_FLAG);
    }
    else
    {
        while(dma_flag_get(DMAy_FLAG) == RESET);    /* Wait until USART TX DMA1 Transfer Complete */
        dma_flag_clear(DMAy_FLAG);
    }
    memcpy(p_DMA_BUFF,Data,Length);                     // 一定等上一个发送完成才能修改
    
    dma_default_para_init(&dma_init_struct);
    dma_init_struct.buffer_size = Length;                           //
    dma_init_struct.direction = DMA_DIR_MEMORY_TO_PERIPHERAL;
    dma_init_struct.memory_base_addr = (uint32_t)p_DMA_BUFF;        //
    dma_init_struct.memory_data_width = DMA_MEMORY_DATA_WIDTH_BYTE; 
    dma_init_struct.memory_inc_enable = TRUE;
    dma_init_struct.peripheral_base_addr = (uint32_t)&uart_Temp->dt;    //
    dma_init_struct.peripheral_data_width = DMA_PERIPHERAL_DATA_WIDTH_BYTE;
    dma_init_struct.peripheral_inc_enable = FALSE;
    dma_init_struct.priority = DMA_PRIORITY_MEDIUM;
    dma_init_struct.loop_mode_enable = FALSE;
    dma_init(Temp_DMA_Channel, &dma_init_struct);

    /* config flexible dma for usartx tx */
    usart_dma_transmitter_enable(uart_Temp, TRUE); 
    
//    dma_flexible_config(DMA_Temp, Temp_FLEX_Channel, DMA_FLEXIBLE_Temp);
    dma_channel_enable(Temp_DMA_Channel, TRUE);    /* usart tx begin dma transmitting */
#endif
}
